RESOLVED FIXED131456
TileGrid should be PlatformCALayerClient instead of TileController
https://bugs.webkit.org/show_bug.cgi?id=131456
Summary TileGrid should be PlatformCALayerClient instead of TileController
Antti Koivisto
Reported 2014-04-09 14:43:59 PDT
It is PlatformCALayerClient is for the tiles in the grid.
Attachments
patch (19.07 KB, patch)
2014-04-09 15:12 PDT, Antti Koivisto
thorton: review+
Antti Koivisto
Comment 1 2014-04-09 15:12:14 PDT
Antti Koivisto
Comment 2 2014-04-09 15:31:25 PDT
Antti Koivisto
Comment 3 2014-04-09 16:03:52 PDT
Note You need to log in before you can comment on or make changes to this bug.