Source/WebCore/platform/graphics/ca/mac/TileGrid.h
@@ -28,6 +28,7 @@
 
 #include "IntPointHash.h"
 #include "IntRect.h"
+#include "PlatformCALayerClient.h"
 #include "Timer.h"
 #include <wtf/Deque.h>
 #include <wtf/HashMap.h>
@@ -36,11 +37,12 @@
 
 namespace WebCore {
 
+class GraphicsContext;
 class PlatformCALayer;
 class TileController;
 
-class TileGrid {
-    WTF_MAKE_NONCOPYABLE(TileGrid);
+class TileGrid : public PlatformCALayerClient {
+    WTF_MAKE_NONCOPYABLE(TileGrid); WTF_MAKE_FAST_ALLOCATED;
 public:
     TileGrid(TileController&);
     ~TileGrid();
@@ -109,6 +111,17 @@ private:
     TileCohort newestTileCohort() const;
     TileCohort oldestTileCohort() const;
 
+    void removeTiles(Vector<TileGrid::TileIndex>& toRemove);
+
+    // PlatformCALayerClient
+    virtual void platformCALayerPaintContents(PlatformCALayer*, GraphicsContext&, const FloatRect&) override;
+    virtual bool platformCALayerShowDebugBorders() const override;
+    virtual bool platformCALayerShowRepaintCounter(PlatformCALayer*) const override;
+    virtual int platformCALayerIncrementRepaintCount(PlatformCALayer*) override;
+    virtual bool platformCALayerContentsOpaque() const override;
+    virtual bool platformCALayerDrawsContent() const override { return true; }
+    virtual float platformCALayerDeviceScaleFactor() const override;
+
     TileController& m_controller;
     Ref<PlatformCALayer> m_containerLayer;
 
@@ -132,6 +145,9 @@ private:
     TileCohortList m_cohortList;
 
     Timer<TileGrid> m_cohortRemovalTimer;
+
+    typedef HashMap<PlatformCALayer*, int> RepaintCountMap;
+    RepaintCountMap m_tileRepaintCounts;
 };
 
 }
